briank-gitops/spaces/kw-smoke2-dev/smoke2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: smoke2-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: smoke2
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: smoke2
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
